[project]
name = "lark-vba"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SosUts", email = "uts.199.ubosou@gmail.com" }
]
dependencies = [
    "rich>=13.7.1",
    "lark>=1.1.9",
    "pytest>=8.1.1",
    "ipykernel>=6.29.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "lark_vba:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lark_vba"]
